# che-orm

./: .gitignore  Cargo.toml  README.md
crates/che-orm/: Cargo.toml  README.md
crates/che-orm-cli/: Cargo.toml  README.md
crates/che-orm-cli/src/: main.rs
crates/che-orm-examples/: Cargo.toml  README.md
crates/che-orm-macros/: Cargo.toml
crates/che-orm-macros/src/: lib.rs
crates/che-orm/src/: error.rs  lib.rs  manager.rs  migration.rs  model.rs  schema.rs  sqlite.rs
crates/che-orm/tests/: migrations.rs  relations.rs  sqlite_crud.rs
