[workspace]
members = [
    "crates/che-orm",
    "crates/che-orm-cli",
    "crates/che-orm-examples",
    "crates/che-orm-macros",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
che-orm = { path = "crates/che-orm", version = "0.1.0" }
che-orm-macros = { path = "crates/che-orm-macros", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
syn = { version = "2", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
